Removed most of unnecessary files

--- a/404.html
+++ b/404.html
@@ -1,10 +1,28 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
 
-<h1>404</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <![endif]-->
+</head>
 
-<p>
-  <strong>Page not found :(</strong>
-</p>
-<p>The requested page could not be found.</p>
+<body>
+  <header><h1>404</h1></header>
+      <p>
+        <strong>Page not found :(</strong>
+      </p>
+      <p>The requested page could not be found.</p>
+  <footer>
+      <p>
+        <small>&copy; 2018 Rafal Mielowski</small>
+      </p>
+  </footer>
+</body>
+<script src="/assets/js/scale.fix.js"></script>
+
+</html>
