--- a/index.html
+++ b/index.html
@@ -1,20 +1,60 @@
----
-layout: default
-title: Rafal M. Mielowski
-logo: "/assets/img/rafal-vsmall.jpg"
-permalink: /
-menus:
-  header:
-    title: Home
-    weight: 1
----
+<!DOCTYPE html>
+<html lang="en">
 
-{% capture aboutme %}
-{% include_relative aboutme.md %}
-{% endcapture %}
-<header>
-    <h1>{{ page.title }}</h1>
-</header>
-<img src="{{ page.logo }}" />
-{{ aboutme | markdownify }}
-{%- include contact.html -%}
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <![endif]-->
+</head>
+
+
+<body>
+    <header>
+        <h1>Rafal M. Mielowski</h1>
+    </header>
+    <img src="/assets/img/rafal-vsmall.jpg" />
+    <main>
+        <p>
+            Bachelor in the Information and Communication Technologies. Master in the Telecomunications. Both titles were obtain at The Faculty of Electronics and Information Technology of Warsaw University of Technology.
+        </p>
+    </main>
+    <ul class="contact-list">
+        <li>
+            <a href="https://github.com/mielek">
+                <svg viewBox="0 0 16 16" width="18px" height="18px">
+                    <use xlink:href="/assets/img/social-icons.svg#github"></use>
+                </svg>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/in/mielek">
+                <svg viewBox="0 0 16 16" width="18px" height="18px">
+                    <use xlink:href="/assets/img/social-icons.svg#linkedin"></use>
+                </svg>
+            </a>
+        </li>
+        <li>
+            <a href="mailto:rafal@mielowski.com">
+                <svg viewBox="0 0 483.3 483.3" width="18px" height="18px">
+                    <use xlink:href="/assets/img/social-icons.svg#envelope"></use>
+                </svg>
+            </a>
+        </li>
+    </ul>
+    <footer>
+        <p>
+            <small>&copy; 2018 Rafal Mielowski</small>
+        </p>
+    </footer>
+</body>
+
+<!-- button onclick="topFunction()" id="goUpButton" title="Go to top">Top</button>
+<script src="/assets/js/goUpButton.js"></script -->
+
+<script src="/assets/js/scale.fix.js"></script>
+
+</html>
